--- a/yes_page.html
+++ b/yes_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Sabia que dirias que si :)</h1>
+        <h1 class="header_text"> Ya sabia que dirias que si :p</h1>
         <div class="gif_container">
             <img src="img/12.jpg" alt="Imagen local" width="200" height="100">
         </div>
