verde si rojo no

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <button class="yes-button" onclick="handleYesClick()">Si</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
+        <div class="explanation">
+            <p><strong>VERDE = Si, ROJO = No</strong></p>
+        </div>
         <div class="gif_container">
             <img src="img/yo.png" alt="Imagen local" width="300" height="200">
         </div>
