--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="envelope">
             <div class="top"></div>
             <div class="letter">
-                <p class="explanation">VERDE = Sí, ROJO = No</p>
+                <p class="explanation">VERDE = Sí</p>
+                <p class="explanation">ROJO = No</p>
             </div>
         </div>
     </div>
